--- a/docs/components/divider/index.mdx
+++ b/docs/components/divider/index.mdx
@@ -106,7 +106,7 @@ Dividers provide subtle visual separation that helps users understand content re
   </elvt-button>
 </div>`}
 >
-  <div style={{display: 'flex', alignItems: 'center', gap: '1rem', padding: '1rem', border: '1px solid #e0e0e0', borderRadius: '4px'}}>
+  <elvt-stack direction="row" align="center" spacing="medium" style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 4px">
     <elvt-button size="small" tone="subtle">
       <elvt-icon slot="prefix" icon="mdi:file"></elvt-icon>
       New
@@ -130,7 +130,7 @@ Dividers provide subtle visual separation that helps users understand content re
       <elvt-icon slot="prefix" icon="mdi:help-circle"></elvt-icon>
       Help
     </elvt-button>
-  </div>
+  </elvt-stack>
 </ComponentShowcase>
 
 ### Visual Styles
@@ -317,21 +317,21 @@ import '@inform-elevate/elevate-core-ui/dist/components/divider/divider.js';
       <elvt-divider></elvt-divider>
       
       <div style={{padding: '1rem'}}>
-        <div style={{display: 'flex', gap: '0.5rem'}}>
+        <elvt-stack direction="row" spacing="small">
           <elvt-button size="small" variant="primary">Save Changes</elvt-button>
           <elvt-button size="small" tone="subtle">Reset</elvt-button>
-        </div>
+        </elvt-stack>
       </div>
     </div>
     
     {/* Navigation with vertical dividers */}
-    <div style={{display: 'flex', alignItems: 'center', gap: '1rem', padding: '0.75rem', background: '#f4f4f4', borderRadius: '8px'}}>
+    <elvt-stack direction="row" align="center" spacing="medium" style="padding: 0.75rem; background: #f4f4f4; border-radius: 8px">
       <elvt-button size="small" tone="subtle">Dashboard</elvt-button>
       <elvt-divider orientation="vertical" style={{height: '20px', backgroundColor: '#c6c6c6'}}></elvt-divider>
       <elvt-button size="small" tone="subtle">Reports</elvt-button>
       <elvt-divider orientation="vertical" style={{height: '20px', backgroundColor: '#c6c6c6'}}></elvt-divider>
       <elvt-button size="small" tone="subtle">Settings</elvt-button>
-    </div>
+    </elvt-stack>
   </div>
 </ComponentShowcase>
 
