--- a/docs/components/button/index.mdx
+++ b/docs/components/button/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 1
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Button
 
@@ -32,8 +33,8 @@ Each tone communicates a different type of action and creates visual hierarchy i
 
 <ComponentShowcase 
   title="Button Tones"
-  description="Different button tones for various use cases and semantic meaning."
-  code={`<div style="display: flex; gap: 0.75rem; align-items: center; flex-wrap: wrap;">
+  description="Different button tones for various use cases and semantic meaning.">
+<elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary">Primary</elvt-button>
   <elvt-button tone="neutral">Neutral</elvt-button>
   <elvt-button tone="success">Success</elvt-button>
@@ -41,16 +42,7 @@ Each tone communicates a different type of action and creates visual hierarchy i
   <elvt-button tone="danger">Danger</elvt-button>
   <elvt-button tone="subtle">Subtle</elvt-button>
   <elvt-button tone="emphasized">Emphasized</elvt-button>
-</div>`}>
-<div style={{display: 'flex', gap: '0.75rem', alignItems: 'center', flexWrap: 'wrap'}}>
-  <elvt-button tone="primary">Primary</elvt-button>
-  <elvt-button tone="neutral">Neutral</elvt-button>
-  <elvt-button tone="success">Success</elvt-button>
-  <elvt-button tone="warning">Warning</elvt-button>
-  <elvt-button tone="danger">Danger</elvt-button>
-  <elvt-button tone="subtle">Subtle</elvt-button>
-  <elvt-button tone="emphasized">Emphasized</elvt-button>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ### State Variations
@@ -63,8 +55,7 @@ Buttons can be disabled when an action is temporarily unavailable.
 
 <ComponentShowcase 
   title="Disabled Button"
-  description="Buttons in disabled state cannot be interacted with."
-  code={`<elvt-button tone="primary" disabled>Disabled Button</elvt-button>`}>
+  description="Buttons in disabled state cannot be interacted with.">
 <elvt-button tone="primary" disabled>Disabled Button</elvt-button>
 </ComponentShowcase>
 
@@ -76,8 +67,7 @@ Selected state for buttons that toggle or represent current selection.
 
 <ComponentShowcase
   title="Selected Button"
-  description="Buttons can show an active or selected state."
-  code={`<elvt-button tone="primary" selected>Selected Button</elvt-button>`}>
+  description="Buttons can show an active or selected state.">
 <elvt-button tone="primary" selected>Selected Button</elvt-button>
 </ComponentShowcase>
 
@@ -95,8 +85,8 @@ Icons before text help identify the action type or category.
 
 <ComponentShowcase 
   title="Buttons with Prefix Icons"
-  description="Icons placed before button text provide visual context for the action."
-  code={`<div style="display: flex; gap: 0.75rem; flex-wrap: wrap; align-items: center;">
+  description="Icons placed before button text provide visual context for the action.">
+<elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary">
     <elvt-icon slot="prefix" icon="mdi:plus"></elvt-icon>
     Add Item
@@ -109,21 +99,7 @@ Icons before text help identify the action type or category.
     <elvt-icon slot="prefix" icon="mdi:delete"></elvt-icon>
     Delete
   </elvt-button>
-</div>`}>
-<div style={{display: 'flex', gap: '0.75rem', flexWrap: 'wrap', alignItems: 'center'}}>
-  <elvt-button tone="primary">
-    <elvt-icon slot="prefix" icon="mdi:plus"></elvt-icon>
-    Add Item
-  </elvt-button>
-  <elvt-button tone="success">
-    <elvt-icon slot="prefix" icon="mdi:download"></elvt-icon>
-    Download
-  </elvt-button>
-  <elvt-button tone="danger">
-    <elvt-icon slot="prefix" icon="mdi:delete"></elvt-icon>
-    Delete
-  </elvt-button>
-  </div>
+</elvt-stack>
 </ComponentShowcase>
 
 #### Suffix Icons
@@ -132,23 +108,8 @@ Icons after text suggest direction or outcome of the action.
 
 <ComponentShowcase
   title="Buttons with Suffix Icons"
-  description="Icons placed after button text indicate direction or outcome."
-  code={`<div style="display: flex; gap: 0.75rem; flex-wrap: wrap; align-items: center;">
-  <elvt-button tone="primary">
-    Continue
-    <elvt-icon slot="suffix" icon="mdi:chevron-right"></elvt-icon>
-  </elvt-button>
-  <elvt-button>
-    Open Link
-    <elvt-icon slot="suffix" icon="mdi:open-in-new"></elvt-icon>
-  </elvt-button>
-  <elvt-button tone="subtle">
-    Expand
-    <elvt-icon slot="suffix" icon="mdi:chevron-down"></elvt-icon>
-  </elvt-button>
-</div>`}
->
-  <div style={{display: 'flex', gap: '0.75rem', flexWrap: 'wrap', alignItems: 'center'}}>
+  description="Icons placed after button text indicate direction or outcome.">
+  <elvt-stack direction="row" spacing="medium" align="center" wrap>
     <elvt-button tone="primary">
       Continue
       <elvt-icon slot="suffix" icon="mdi:chevron-right"></elvt-icon>
@@ -161,7 +122,7 @@ Icons after text suggest direction or outcome of the action.
       Expand
       <elvt-icon slot="suffix" icon="mdi:chevron-down"></elvt-icon>
     </elvt-button>
-  </div>
+  </elvt-stack>
 </ComponentShowcase>
 
 #### Icon Only
@@ -170,23 +131,8 @@ Icon-only buttons save space but require clear, universally understood icons and
 
 <ComponentShowcase
   title="Icon-Only Buttons"
-  description="Buttons with only icons should have proper accessibility attributes."
-  code={`<div style="display: flex; gap: 0.75rem; align-items: center;">
-  <elvt-button tone="primary" title="Add new item" aria-label="Add new item">
-    <elvt-icon icon="mdi:plus"></elvt-icon>
-  </elvt-button>
-  <elvt-button title="Edit" aria-label="Edit">
-    <elvt-icon icon="mdi:pencil"></elvt-icon>
-  </elvt-button>
-  <elvt-button tone="danger" title="Delete" aria-label="Delete">
-    <elvt-icon icon="mdi:delete"></elvt-icon>
-  </elvt-button>
-  <elvt-button tone="subtle" title="More options" aria-label="More options">
-    <elvt-icon icon="mdi:dots-vertical"></elvt-icon>
-  </elvt-button>
-</div>`}
->
-  <div style={{display: 'flex', gap: '0.75rem', alignItems: 'center'}}>
+  description="Buttons with only icons should have proper accessibility attributes.">
+  <elvt-stack direction="row" spacing="medium" align="center">
     <elvt-button tone="primary" title="Add new item" aria-label="Add new item">
       <elvt-icon icon="mdi:plus"></elvt-icon>
     </elvt-button>
@@ -199,25 +145,19 @@ Icon-only buttons save space but require clear, universally understood icons and
     <elvt-button tone="subtle" title="More options" aria-label="More options">
       <elvt-icon icon="mdi:dots-vertical"></elvt-icon>
     </elvt-button>
-  </div>
+  </elvt-stack>
 </ComponentShowcase>
 
 ### Size Variations
 
 <ComponentShowcase
   title="Button Sizes"
-  description="Three button sizes available - small, medium (default), and large."
-  code={`<div style="display: flex; gap: 1rem; align-items: center;">
-  <elvt-button size="small">Small</elvt-button>
-  <elvt-button size="medium">Medium</elvt-button>
-  <elvt-button size="large">Large</elvt-button>
-</div>`}
->
-  <div style={{display: 'flex', gap: '1rem', alignItems: 'center'}}>
+  description="Three button sizes available - small, medium (default), and large.">
+  <elvt-stack direction="row" spacing="large" align="center">
     <elvt-button size="small">Small</elvt-button>
     <elvt-button size="medium">Medium</elvt-button>
     <elvt-button size="large">Large</elvt-button>
-  </div>
+  </elvt-stack>
 </ComponentShowcase>
 
 ## Design Principles
@@ -382,6 +322,7 @@ import '@inform-elevate/elevate-core-ui/dist/components/button/button.js';
 <!-- Good: Screen readers can announce the action -->
 <elvt-button aria-label="Delete item" title="Delete item">
   <elvt-icon icon="mdi:delete"></elvt-icon>
+  <elvt-visually-hidden>Delete Item</elvt-visually-hidden>
 </elvt-button>
 
 <!-- Bad: Screen readers can't identify the action -->
@@ -408,23 +349,9 @@ import '@inform-elevate/elevate-core-ui/dist/components/button/button.js';
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.25-alpha (July 10, 2025)
-- **Breaking**: Adjust Button Design, Remove Shoelace Button
-- **Enhanced**: Complete rewrite with custom styling
-
-### Version 0.0.22-alpha (June 25, 2025)
-- **New**: Add ButtonComponent.focus() method
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **New**: Add "name" and "value" Attributes to Button
-- **Breaking**: Replace Severity with Tone
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **Fixed**: Fixed Usability Issues in Button and Button Group Stories
-
-### Version 0.0.3-alpha (March 27, 2025)
-- **New**: Add Button Component (initial implementation)
-- **New**: Add Icon Button Component
+<ComponentChangelog 
+  component="elvt-button" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
