--- a/docs/components/icon/index.mdx
+++ b/docs/components/icon/index.mdx
@@ -181,7 +181,7 @@ Icons can be sized using CSS font-size or by setting custom dimensions for diffe
   </div>
 </div>`}
 >
-  <div style={{display: 'flex', alignItems: 'center', gap: '2rem', flexWrap: 'wrap'}}>
+  <elvt-stack direction="row" spacing="large" align="center" wrap>
     <div style={{textAlign: 'center'}}>
       <elvt-icon icon="mdi:settings" style={{fontSize: '16px', color: '#161616'}}></elvt-icon>
       <div style={{fontSize: '0.75rem', marginTop: '0.25rem'}}>Small (16px)</div>
@@ -198,7 +198,7 @@ Icons can be sized using CSS font-size or by setting custom dimensions for diffe
       <elvt-icon icon="mdi:settings" style={{fontSize: '48px', color: '#161616'}}></elvt-icon>
       <div style={{fontSize: '0.75rem', marginTop: '0.25rem'}}>Extra Large (48px)</div>
     </div>
-  </div>
+  </elvt-stack>
 </ComponentShowcase>
 
 ### Style Treatments
@@ -369,14 +369,14 @@ Experience how icons enhance real interface elements and improve usability.
   </div>
 </div>`}
 >
-  <div style={{display: 'flex', flexDirection: 'column', gap: '2rem', maxWidth: '500px'}}>
-    <div style={{display: 'flex', alignItems: 'center', gap: '0.5rem', padding: '0.75rem', border: '1px solid #8d8d8d', borderRadius: '4px'}}>
+  <elvt-stack direction="column" spacing="large" style="max-width: 500px">
+    <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.75rem; border: 1px solid #8d8d8d; border-radius: 4px">
       <elvt-icon icon="mdi:magnify" style={{color: '#6f6f6f', fontSize: '20px'}}></elvt-icon>
       <input type="text" placeholder="Search products..." style={{border: 'none', outline: 'none', flex: 1, fontSize: '1rem'}} />
       <elvt-icon icon="mdi:close" style={{color: '#8d8d8d', fontSize: '18px', cursor: 'pointer'}} title="Clear search"></elvt-icon>
-    </div>
+    </elvt-stack>
     
-    <div style={{display: 'flex', gap: '1rem', flexWrap: 'wrap'}}>
+    <elvt-stack direction="row" spacing="medium" wrap>
       <button style={{display: 'flex', alignItems: 'center', gap: '0.5rem', padding: '0.75rem 1rem', border: 'none', background: '#0066cc', color: 'white', borderRadius: '4px', cursor: 'pointer'}}>
         <elvt-icon icon="mdi:plus" style={{fontSize: '16px'}}></elvt-icon>
         <span>Add Item</span>
@@ -389,23 +389,23 @@ Experience how icons enhance real interface elements and improve usability.
         <elvt-icon icon="mdi:delete" style={{fontSize: '16px'}}></elvt-icon>
         <span>Delete</span>
       </button>
-    </div>
+    </elvt-stack>
     
-    <div style={{display: 'flex', flexDirection: 'column', gap: '0.5rem'}}>
-      <div style={{display: 'flex', alignItems: 'center', gap: '0.5rem', padding: '0.5rem', background: '#f0f8ff', borderRadius: '4px'}}>
+    <elvt-stack direction="column" spacing="small">
+      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #f0f8ff; border-radius: 4px">
         <elvt-icon icon="mdi:information" style={{color: '#0066cc', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Your changes have been saved automatically</span>
-      </div>
-      <div style={{display: 'flex', alignItems: 'center', gap: '0.5rem', padding: '0.5rem', background: '#f0f9f0', borderRadius: '4px'}}>
+      </elvt-stack>
+      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #f0f9f0; border-radius: 4px">
         <elvt-icon icon="mdi:check-circle" style={{color: '#24a148', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Upload completed successfully</span>
-      </div>
-      <div style={{display: 'flex', alignItems: 'center', gap: '0.5rem', padding: '0.5rem', background: '#fff9f0', borderRadius: '4px'}}>
+      </elvt-stack>
+      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #fff9f0; border-radius: 4px">
         <elvt-icon icon="mdi:alert-circle" style={{color: '#f1c21b', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Please review your settings before continuing</span>
-      </div>
-    </div>
-  </div>
+      </elvt-stack>
+    </elvt-stack>
+  </elvt-stack>
 </ComponentShowcase>
 
 ## Accessibility
