--- a/docs/components/index.mdx
+++ b/docs/components/index.mdx
@@ -1,120 +1,388 @@
 ---
-title: Components
+title: Overview
 description: ELEVATE Core UI components provide the building blocks for consistent, accessible user interfaces across all INFORM applications.
-sidebar_position: 4
+sidebar_position: 1
 ---
 
-import ComponentShowcase from '@site/src/components/ComponentShowcase';
-import { ElvtButton, ElvtInput, ElvtCard } from '@inform-elevate/elevate-core-ui/dist/react';
+# Components Overview
 
-# ELEVATE Components
+The ELEVATE Component Library provides 45+ accessible, consistent, and well-documented UI components for building modern web applications. Each component follows ELEVATE design principles and integrates seamlessly with the INFORM design system.
 
-The ELEVATE Component Library provides a comprehensive set of accessible, consistent, and well-documented UI components for building modern web applications. Each component follows ELEVATE design principles and integrates seamlessly with the INFORM design system.
+## Form & Input Components
 
-## Component Categories
-
-### Form Components
-Essential components for data collection and user input with built-in validation and accessibility features.
-
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '1rem', margin: '2rem 0'}}>
-  <ElvtCard>
-    <h4 style={{marginTop: 0}}>Input</h4>
-    <p>Text inputs for various data types with validation states and help text.</p>
-    <div style={{marginBottom: '1rem'}}>
-      <ElvtInput type="text" label="Example Input" placeholder="Enter text here" size="small" />
+<div className="elvt-component-grid">
+  <a href="/docs/components/input" className="elvt-component-card">
+    <div className="elvt-component-icon">📝</div>
+    <div className="elvt-component-info">
+      <h4>Input</h4>
+      <p>Text inputs for various data types with validation states and help text</p>
     </div>
-    <ElvtButton tone="primary" size="small" href="/docs/components/input">View Input Docs</ElvtButton>
-  </ElvtCard>
+  </a>
+
+  <a href="/docs/components/select" className="elvt-component-card">
+    <div className="elvt-component-icon">📋</div>
+    <div className="elvt-component-info">
+      <h4>Select</h4>
+      <p>Dropdown selection components for single and multiple choices</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/checkbox" className="elvt-component-card">
+    <div className="elvt-component-icon">✅</div>
+    <div className="elvt-component-info">
+      <h4>Checkbox</h4>
+      <p>Binary choice selections with support for indeterminate states</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/radio" className="elvt-component-card">
+    <div className="elvt-component-icon">🔘</div>
+    <div className="elvt-component-info">
+      <h4>Radio</h4>
+      <p>Single choice from multiple options in radio button groups</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/switch" className="elvt-component-card">
+    <div className="elvt-component-icon">🔄</div>
+    <div className="elvt-component-info">
+      <h4>Switch</h4>
+      <p>Toggle controls for settings and binary preferences</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/date-picker" className="elvt-component-card">
+    <div className="elvt-component-icon">📅</div>
+    <div className="elvt-component-info">
+      <h4>Date Picker</h4>
+      <p>Calendar-based date selection with range support</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/textarea" className="elvt-component-card">
+    <div className="elvt-component-icon">📄</div>
+    <div className="elvt-component-info">
+      <h4>Textarea</h4>
+      <p>Multi-line text input for longer content with auto-resize</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/slider" className="elvt-component-card">
+    <div className="elvt-component-icon">🎚️</div>
+    <div className="elvt-component-info">
+      <h4>Slider</h4>
+      <p>Range input for selecting numeric values with draggable handle</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/file-dropzone" className="elvt-component-card">
+    <div className="elvt-component-icon">📁</div>
+    <div className="elvt-component-info">
+      <h4>File Dropzone</h4>
+      <p>Drag and drop file upload with validation and progress</p>
+    </div>
+  </a>
 </div>
 
-### Action Components  
-Components that trigger actions and guide users through workflows with clear visual hierarchy.
+## Action Components
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '1rem', margin: '2rem 0'}}>
-  <ElvtCard>
-    <h4 style={{marginTop: 0}}>Button</h4>
-    <p>Primary interface for user actions with multiple tones and states for clear hierarchy.</p>
-    <div style={{display: 'flex', gap: '0.5rem', marginBottom: '1rem', flexWrap: 'wrap'}}>
-      <ElvtButton tone="primary" size="small">Primary</ElvtButton>
-      <ElvtButton size="small">Secondary</ElvtButton>
-      <ElvtButton tone="success" size="small">Success</ElvtButton>
+<div className="elvt-component-grid">
+  <a href="/docs/components/button" className="elvt-component-card">
+    <div className="elvt-component-icon">🔲</div>
+    <div className="elvt-component-info">
+      <h4>Button</h4>
+      <p>Primary action triggers with multiple tones and states</p>
     </div>
-    <ElvtButton tone="primary" size="small" href="/docs/components/button">View Button Docs</ElvtButton>
-  </ElvtCard>
+  </a>
+
+  <a href="/docs/components/button-group" className="elvt-component-card">
+    <div className="elvt-component-icon">🔳</div>
+    <div className="elvt-component-info">
+      <h4>Button Group</h4>
+      <p>Related button collections with consistent styling</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/icon-button" className="elvt-component-card">
+    <div className="elvt-component-icon">⚪</div>
+    <div className="elvt-component-info">
+      <h4>Icon Button</h4>
+      <p>Compact icon-only actions for toolbars and interfaces</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/link" className="elvt-component-card">
+    <div className="elvt-component-icon">🔗</div>
+    <div className="elvt-component-info">
+      <h4>Link</h4>
+      <p>Navigation and external links with accessibility support</p>
+    </div>
+  </a>
 </div>
 
-### Layout Components
-Flexible containers that organize content and create visual hierarchy in complex interfaces.
+## Layout & Structure
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '1rem', margin: '2rem 0'}}>
-  <ElvtCard>
-    <h4 style={{marginTop: 0}}>Card</h4>
-    <p>Versatile containers for grouping related content with multiple styling options.</p>
-    <div style={{marginBottom: '1rem'}}>
-      <ElvtCard padding="s" layer="elevated">
-        <div style={{fontSize: '0.875rem', color: '#666'}}>Example nested card content</div>
-      </ElvtCard>
+<div className="elvt-component-grid">
+  <a href="/docs/components/card" className="elvt-component-card">
+    <div className="elvt-component-icon">🃏</div>
+    <div className="elvt-component-info">
+      <h4>Card</h4>
+      <p>Versatile containers for grouping related content</p>
     </div>
-    <ElvtButton tone="primary" size="small" href="/docs/components/card">View Card Docs</ElvtButton>
-  </ElvtCard>
+  </a>
+
+  <a href="/docs/components/divider" className="elvt-component-card">
+    <div className="elvt-component-icon">➖</div>
+    <div className="elvt-component-info">
+      <h4>Divider</h4>
+      <p>Visual content separation with horizontal and vertical options</p>
+    </div>
+  </a>
 </div>
 
-## Available Components
+## Navigation Components
 
-The ELEVATE Component Library includes 35+ components organized into logical categories:
+<div className="elvt-component-grid">
+  <a href="/docs/components/menu" className="elvt-component-card">
+    <div className="elvt-component-icon">📋</div>
+    <div className="elvt-component-info">
+      <h4>Menu</h4>
+      <p>Application navigation menus with hierarchical support</p>
+    </div>
+  </a>
 
-### Form & Input Components
-- **Input** - Text inputs for various data types
-- **Select** - Dropdown selection components  
-- **Checkbox** - Binary choice selections
-- **Radio** - Single choice from multiple options
-- **Switch** - Toggle controls for settings
-- **Date Picker** - Calendar-based date selection
-- **Field** - Form field wrapper with validation
+  <a href="/docs/components/menu-item" className="elvt-component-card">
+    <div className="elvt-component-icon">📄</div>
+    <div className="elvt-component-info">
+      <h4>Menu Item</h4>
+      <p>Individual navigation items with icons and actions</p>
+    </div>
+  </a>
 
-### Action Components
-- **Button** - Primary action triggers
-- **Button Group** - Related button collections  
-- **Icon Button** - Compact icon-only actions
-- **Link** - Navigation and external links
+  <a href="/docs/components/breadcrumb" className="elvt-component-card">
+    <div className="elvt-component-icon">🍞</div>
+    <div className="elvt-component-info">
+      <h4>Breadcrumb</h4>
+      <p>Hierarchical navigation showing current location</p>
+    </div>
+  </a>
 
-### Layout & Structure
-- **Card** - Content containers and grouping
-- **Divider** - Visual content separation
-- **Stack** - Flexible layout containers
-- **Grid** - Responsive grid layouts
+  <a href="/docs/components/breadcrumb-item" className="elvt-component-card">
+    <div className="elvt-component-icon">🔸</div>
+    <div className="elvt-component-info">
+      <h4>Breadcrumb Item</h4>
+      <p>Individual breadcrumb links with separator support</p>
+    </div>
+  </a>
 
-### Navigation Components
-- **Menu** - Application navigation menus
-- **Menu Item** - Individual navigation items
-- **Breadcrumb** - Hierarchical navigation
-- **Breadcrumb Item** - Individual breadcrumb links
+  <a href="/docs/components/tab" className="elvt-component-card">
+    <div className="elvt-component-icon">🗂️</div>
+    <div className="elvt-component-info">
+      <h4>Tab</h4>
+      <p>Individual tab component for tabbed navigation interfaces</p>
+    </div>
+  </a>
 
-### Feedback & Status
-- **Notification** - System messages and alerts
-- **Progress** - Task completion indicators
-- **Badge** - Status indicators and counts
-- **Indicator** - Visual status signals
-- **Tooltip** - Contextual help and information
+  <a href="/docs/components/tab-group" className="elvt-component-card">
+    <div className="elvt-component-icon">📑</div>
+    <div className="elvt-component-info">
+      <h4>Tab Group</h4>
+      <p>Container for organizing multiple tabs with content panels</p>
+    </div>
+  </a>
+</div>
 
-### Data Display
-- **Table** - Structured data presentation
-- **Avatar** - User representation
-- **Icon** - Visual symbols and indicators
-- **Chip** - Compact information display
-- **Empty State** - No-content placeholders
+## Feedback & Status
 
-### Overlay Components
-- **Dialog** - Modal dialogs and confirmations
-- **Drawer** - Side panel overlays
-- **Lightbox** - Media viewing overlay
-- **Dropdown** - Contextual option lists
+<div className="elvt-component-grid">
+  <a href="/docs/components/badge" className="elvt-component-card">
+    <div className="elvt-component-icon">🏷️</div>
+    <div className="elvt-component-info">
+      <h4>Badge</h4>
+      <p>Status indicators and counts with multiple variants</p>
+    </div>
+  </a>
 
-### Specialized Components
-- **Application** - Root application wrapper
-- **Charts** - Data visualization components
-- **Expansion Panel** - Collapsible content sections
-- **Paginator** - Content pagination controls
+  <a href="/docs/components/indicator" className="elvt-component-card">
+    <div className="elvt-component-icon">🔴</div>
+    <div className="elvt-component-info">
+      <h4>Indicator</h4>
+      <p>Visual status signals for notifications and states</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/notification" className="elvt-component-card">
+    <div className="elvt-component-icon">🔔</div>
+    <div className="elvt-component-info">
+      <h4>Notification</h4>
+      <p>System messages and alerts with different severity levels</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/progress" className="elvt-component-card">
+    <div className="elvt-component-icon">📊</div>
+    <div className="elvt-component-info">
+      <h4>Progress</h4>
+      <p>Task completion indicators with determinate and indeterminate states</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/tooltip" className="elvt-component-card">
+    <div className="elvt-component-icon">💬</div>
+    <div className="elvt-component-info">
+      <h4>Tooltip</h4>
+      <p>Contextual help and information on hover or focus</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/toast" className="elvt-component-card">
+    <div className="elvt-component-icon">🍞</div>
+    <div className="elvt-component-info">
+      <h4>Toast</h4>
+      <p>Temporary notifications that appear briefly for user feedback</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/skeleton" className="elvt-component-card">
+    <div className="elvt-component-icon">⏳</div>
+    <div className="elvt-component-info">
+      <h4>Skeleton</h4>
+      <p>Animated loading placeholders while content is fetching</p>
+    </div>
+  </a>
+</div>
+
+## Data Display
+
+<div className="elvt-component-grid">
+  <a href="/docs/components/avatar" className="elvt-component-card">
+    <div className="elvt-component-icon">👤</div>
+    <div className="elvt-component-info">
+      <h4>Avatar</h4>
+      <p>User representation with image, initials, or icon fallbacks</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/chip" className="elvt-component-card">
+    <div className="elvt-component-icon">🏷️</div>
+    <div className="elvt-component-info">
+      <h4>Chip</h4>
+      <p>Compact information display with optional actions</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/icon" className="elvt-component-card">
+    <div className="elvt-component-icon">⭐</div>
+    <div className="elvt-component-info">
+      <h4>Icon</h4>
+      <p>Visual symbols and indicators from ELEVATE icon library</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/table" className="elvt-component-card">
+    <div className="elvt-component-icon">📋</div>
+    <div className="elvt-component-info">
+      <h4>Table</h4>
+      <p>Structured data presentation with sorting and filtering</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/empty-state" className="elvt-component-card">
+    <div className="elvt-component-icon">📭</div>
+    <div className="elvt-component-info">
+      <h4>Empty State</h4>
+      <p>No-content placeholders with helpful guidance</p>
+    </div>
+  </a>
+</div>
+
+## Overlay Components
+
+<div className="elvt-component-grid">
+  <a href="/docs/components/dialog" className="elvt-component-card">
+    <div className="elvt-component-icon">🔲</div>
+    <div className="elvt-component-info">
+      <h4>Dialog</h4>
+      <p>Modal dialogs and confirmations with focus management</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/drawer" className="elvt-component-card">
+    <div className="elvt-component-icon">📱</div>
+    <div className="elvt-component-info">
+      <h4>Drawer</h4>
+      <p>Side panel overlays for navigation and content</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/dropdown" className="elvt-component-card">
+    <div className="elvt-component-icon">⬇️</div>
+    <div className="elvt-component-info">
+      <h4>Dropdown</h4>
+      <p>Contextual option lists with keyboard navigation</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/lightbox" className="elvt-component-card">
+    <div className="elvt-component-icon">🖼️</div>
+    <div className="elvt-component-info">
+      <h4>Lightbox</h4>
+      <p>Media viewing overlay with zoom and navigation</p>
+    </div>
+  </a>
+</div>
+
+## Specialized Components
+
+<div className="elvt-component-grid">
+  <a href="/docs/components/application" className="elvt-component-card">
+    <div className="elvt-component-icon">🏠</div>
+    <div className="elvt-component-info">
+      <h4>Application</h4>
+      <p>Root application wrapper with theme and context providers</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/charts" className="elvt-component-card">
+    <div className="elvt-component-icon">📊</div>
+    <div className="elvt-component-info">
+      <h4>Charts</h4>
+      <p>Data visualization components for analytics and reporting</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/expansion-panel" className="elvt-component-card">
+    <div className="elvt-component-icon">📂</div>
+    <div className="elvt-component-info">
+      <h4>Expansion Panel</h4>
+      <p>Collapsible content sections with smooth animations</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/paginator" className="elvt-component-card">
+    <div className="elvt-component-icon">📄</div>
+    <div className="elvt-component-info">
+      <h4>Paginator</h4>
+      <p>Content pagination controls with customizable display</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/field" className="elvt-component-card">
+    <div className="elvt-component-icon">📝</div>
+    <div className="elvt-component-info">
+      <h4>Field</h4>
+      <p>Form field wrapper with validation and help text</p>
+    </div>
+  </a>
+
+  <a href="/docs/components/toolbar" className="elvt-component-card">
+    <div className="elvt-component-icon">🔧</div>
+    <div className="elvt-component-info">
+      <h4>Toolbar</h4>
+      <p>Container for organizing action buttons in editing interfaces</p>
+    </div>
+  </a>
+</div>
 
 ## Getting Started
 
@@ -126,33 +394,14 @@ npm install @inform-elevate/elevate-core-ui
 
 ### Basic Usage
 
-```javascript
-// Import all components
-import '@inform-elevate/elevate-core-ui';
-
-// Or import specific components
-import '@inform-elevate/elevate-core-ui/dist/components/button/button.js';
-import '@inform-elevate/elevate-core-ui/dist/components/input/input.js';
-```
-
-### HTML Usage
-
 ```html
-<!-- Use ELEVATE components as web components -->
+<!-- Import ELEVATE components -->
+<script type="module" src="node_modules/@inform-elevate/elevate-core-ui/dist/elevate-core-ui/elevate-core-ui.esm.js"></script>
+
+<!-- Use components in HTML -->
 <elvt-button tone="primary">Click me</elvt-button>
-
-<elvt-input 
-  type="email" 
-  label="Email Address" 
-  placeholder="user@example.com"
-  required>
-</elvt-input>
-
-<elvt-card padding="l">
-  <h3>Card Title</h3>
-  <p>Card content goes here.</p>
-  <elvt-button tone="primary">Action</elvt-button>
-</elvt-card>
+<elvt-input label="Email" type="email" required></elvt-input>
+<elvt-card padding="l">Card content</elvt-card>
 ```
 
 ### React Integration
@@ -160,158 +409,30 @@ import '@inform-elevate/elevate-core-ui/dist/components/input/input.js';
 ```jsx
 import { ElvtButton, ElvtInput, ElvtCard } from '@inform-elevate/elevate-core-ui/dist/react';
 
-function MyComponent() {
+function App() {
   return (
-    <>
-      <ElvtButton tone="primary" onClick={handleClick}>
-        Click me
-      </ElvtButton>
-      
-      <ElvtInput 
-        type="email"
-        label="Email Address"
-        placeholder="user@example.com"
-        required
-      />
-      
-      <ElvtCard padding="l">
-        <h3>Card Title</h3>
-        <p>Card content goes here.</p>
-      </ElvtCard>
-    </>
+    <div>
+      <ElvtButton tone="primary">Click me</ElvtButton>
+      <ElvtInput label="Email" type="email" required />
+      <ElvtCard padding="l">Card content</ElvtCard>
+    </div>
   );
 }
 ```
 
-## Live Component Examples
-
-Explore interactive examples of ELEVATE components working together in realistic contexts.
-
-<ComponentShowcase
-  title="Component Combination Example"
-  description="See how ELEVATE components work together to create cohesive user interfaces."
-  code={`<elvt-card padding="l">
-  <h3>Sign Up Form</h3>
-  <p>Create your account to get started.</p>
-  
-  <div style="display: flex; flex-direction: column; gap: 1rem; margin: 1rem 0;">
-    <elvt-input 
-      type="text" 
-      label="Full Name" 
-      placeholder="Enter your full name"
-      required>
-    </elvt-input>
-    
-    <elvt-input 
-      type="email" 
-      label="Email Address" 
-      placeholder="user@example.com"
-      help-text="We'll never share your email address"
-      required>
-    </elvt-input>
-    
-    <elvt-input 
-      type="password" 
-      label="Password" 
-      placeholder="Create a strong password"
-      help-text="Must be at least 8 characters"
-      required>
-    </elvt-input>
-  </div>
-  
-  <div style="display: flex; gap: 0.5rem; justify-content: flex-end;">
-    <elvt-button>Cancel</elvt-button>
-    <elvt-button tone="primary" type="submit">Create Account</elvt-button>
-  </div>
-</elvt-card>`}
->
-  <div style={{maxWidth: '400px'}}>
-    <ElvtCard padding="l">
-      <h3 style={{marginTop: 0}}>Sign Up Form</h3>
-      <p>Create your account to get started.</p>
-      
-      <div style={{display: 'flex', flexDirection: 'column', gap: '1rem', margin: '1rem 0'}}>
-        <ElvtInput 
-          type="text" 
-          label="Full Name" 
-          placeholder="Enter your full name"
-          required
-        />
-        
-        <ElvtInput 
-          type="email" 
-          label="Email Address" 
-          placeholder="user@example.com"
-          helpText="We'll never share your email address"
-          required
-        />
-        
-        <ElvtInput 
-          type="password" 
-          label="Password" 
-          placeholder="Create a strong password"
-          helpText="Must be at least 8 characters"
-          required
-        />
-      </div>
-      
-      <div style={{display: 'flex', gap: '0.5rem', justifyContent: 'flex-end'}}>
-        <ElvtButton>Cancel</ElvtButton>
-        <ElvtButton tone="primary" type="submit">Create Account</ElvtButton>
-      </div>
-    </ElvtCard>
-  </div>
-</ComponentShowcase>
-
-## Design System Integration
-
-ELEVATE components are built with design system principles at their core:
-
-### Design Tokens
-All components use ELEVATE design tokens for consistent:
-- **Colors** - Semantic color palette with light/dark themes
-- **Typography** - Type scales and font families  
-- **Spacing** - Consistent spacing units and padding options
-- **Borders** - Border radius, widths, and styles
-- **Shadows** - Elevation and depth treatments
-
-### Accessibility Standards
-Every component meets WCAG 2.1 AA standards:
-- **Keyboard Navigation** - Full keyboard accessibility
-- **Screen Reader Support** - Proper ARIA attributes and labels
-- **Color Contrast** - Sufficient contrast ratios for all text
-- **Focus Management** - Clear focus indicators and logical tab order
-
-### Responsive Design
-Components adapt to different screen sizes:
-- **Mobile-First** - Optimized touch targets and layouts
-- **Flexible Layouts** - Components that work in various containers
-- **Breakpoint Awareness** - Responsive behavior when appropriate
-
-## Documentation Standards
-
-Each component includes comprehensive documentation:
-- **Usage Guidelines** - When and how to use the component
-- **API Reference** - Complete property, event, and method documentation  
-- **Design Principles** - Underlying design philosophy and rationale
-- **Best Practices** - Recommended usage patterns with examples
-- **Accessibility** - Specific accessibility features and requirements
-- **Interactive Examples** - Live component demonstrations
-
 ## Resources
 
 - **[Storybook Documentation](https://elevate-core-ui.inform-cloud.io)** - Complete API reference and interactive examples
-- **[Component Samples](/docs/component-samples)** - Quick examples and code snippets
-- **[Design Tokens](/docs/design-tokens)** - Design system foundation reference
-- **[Getting Started](/docs/get-started)** - Setup and installation guide
-- **[GitHub Repository](https://github.com/owrede-inform/elevate-ds)** - Source code and issue tracking
+- **[Installation Guide](/docs/home/installation)** - Setup instructions for different frameworks
+- **[Design Tokens](/docs/design)** - Design system foundation reference
+- **[GitHub Repository](https://github.com/inform-elevate/elevate-ds)** - Source code and issue tracking
 
 ---
 
 :::info Component Status
-Components marked with **✨ New** are recently added features. Components marked with **🔧 Updated** have recent improvements. Check individual component changelogs for detailed version history.
+All components are actively maintained and follow semantic versioning. Check individual component pages for specific version requirements and change logs.
 :::
 
 :::tip Need Help?
-Can't find the component you need? Check the [complete component list in Storybook](https://elevate-core-ui.inform-cloud.io) or [create an issue](https://github.com/owrede-inform/elevate-ds/issues) for component requests and feedback.
+Can't find the component you need? Check the [complete component list in Storybook](https://elevate-core-ui.inform-cloud.io) or [create an issue](https://github.com/inform-elevate/elevate-ds/issues) for component requests and feedback.
 :::
