--- a/docs/components/input/index.mdx
+++ b/docs/components/input/index.mdx
@@ -33,7 +33,7 @@ Different input types provide specific keyboard layouts and validation on mobile
 <ComponentShowcase
   title="Input Types"
   description="Various input types for different data collection needs.">
-<div style={{display: 'flex', flexDirection: 'column', gap: '1rem', maxWidth: '400px'}}>
+<elvt-stack direction="column" spacing="medium" style="max-width: 400px">
   <elvt-input 
     type="text" 
     label="Full Name" 
@@ -63,7 +63,7 @@ Different input types provide specific keyboard layouts and validation on mobile
     label="Website" 
     placeholder="https://example.com">
   </elvt-input>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ### Input States
@@ -73,7 +73,7 @@ Inputs can display various states to communicate status and guide user interacti
 <ComponentShowcase
   title="Input States"
   description="Different states communicate validation status and interaction feedback.">
-<div style={{display: 'flex', flexDirection: 'column', gap: '1rem', maxWidth: '400px'}}>
+<elvt-stack direction="column" spacing="medium" style="max-width: 400px">
   <elvt-input 
     type="text" 
     label="Default State" 
@@ -100,7 +100,7 @@ Inputs can display various states to communicate status and guide user interacti
     value="Cannot be modified"
     readonly>
   </elvt-input>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ### Validation States
@@ -110,7 +110,7 @@ Clear validation feedback helps users understand and correct input errors.
 <ComponentShowcase
   title="Validation States"
   description="Visual feedback for validation status with helpful messages.">
-<div style={{display: 'flex', flexDirection: 'column', gap: '1rem', maxWidth: '400px'}}>
+<elvt-stack direction="column" spacing="medium" style="max-width: 400px">
   <elvt-input 
     type="email" 
     label="Valid Email" 
@@ -134,7 +134,7 @@ Clear validation feedback helps users understand and correct input errors.
     warning
     help-text="This value might cause issues">
   </elvt-input>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ### Input Sizes
@@ -144,7 +144,7 @@ Different sizes accommodate various layout contexts and design hierarchies.
 <ComponentShowcase
   title="Input Sizes"
   description="Three input sizes for different contexts and visual hierarchies.">
-<div style={{display: 'flex', flexDirection: 'column', gap: '1rem', maxWidth: '400px'}}>
+<elvt-stack direction="column" spacing="medium" style="max-width: 400px">
   <elvt-input 
     type="text" 
     label="Small Input" 
@@ -165,7 +165,7 @@ Different sizes accommodate various layout contexts and design hierarchies.
     placeholder="Large size input"
     size="large">
   </elvt-input>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ### Help Text and Labels
@@ -175,7 +175,7 @@ Proper labeling and help text improve usability and accessibility.
 <ComponentShowcase
   title="Labels and Help Text"
   description="Effective labeling and help text patterns for better user guidance.">
-<div style={{display: 'flex', flexDirection: 'column', gap: '1rem', maxWidth: '400px'}}>
+<elvt-stack direction="column" spacing="medium" style="max-width: 400px">
   <elvt-input 
     type="text" 
     label="Company Name" 
@@ -197,7 +197,7 @@ Proper labeling and help text improve usability and accessibility.
     placeholder="This field is optional"
     help-text="You can skip this field and add it later in settings">
   </elvt-input>
-</div>
+</elvt-stack>
 </ComponentShowcase>
 
 ## Design Principles
@@ -394,7 +394,8 @@ import '@inform-elevate/elevate-core-ui/dist/components/input/input.js';
 <ComponentShowcase
   title="Complete Contact Form"
   description="A realistic contact form showing input components in context.">
-<form style={{maxWidth: '400px', display: 'flex', flexDirection: 'column', gap: '1rem'}}>
+<form style="max-width: 400px">
+  <elvt-stack direction="column" spacing="medium">
   <h3>Contact Us</h3>
   
   <elvt-input 
@@ -424,10 +425,11 @@ import '@inform-elevate/elevate-core-ui/dist/components/input/input.js';
     placeholder="Your company name">
   </elvt-input>
   
-  <div style={{display: 'flex', gap: '0.5rem', justifyContent: 'flex-end', marginTop: '1rem'}}>
+  <elvt-stack direction="row" spacing="small" justify="end" style="margin-top: 1rem">
     <elvt-button>Cancel</elvt-button>
     <elvt-button tone="primary" type="submit">Send Message</elvt-button>
-  </div>
+  </elvt-stack>
+  </elvt-stack>
 </form>
 </ComponentShowcase>
 
